--- a/src/styles.css
+++ b/src/styles.css
@@ -84,6 +84,10 @@ h1 {
     width: 100%;
     font-size: 1.25rem;
 }
+
+#description p + p {
+    margin: 10px 0 7px 0;
+}
 ol {
     margin-left: 10%;
 }
